# ift-encoder

./: .bazelrc  BUILD  MODULE.bazel  README.md  check-public-headers.sh
.github/workflows/: ci.yml
brotli/: BUILD  brotli_font_diff.cc  brotli_font_diff.h  brotli_font_diff_test.cc  brotli_stream_test.cc  glyf_differ.h  hmtx_differ.h  table_range.h
common/: BUILD  axis_range.h  axis_range_test.cc  bit_output_buffer_test.cc  font_helper.cc  font_helper.h  font_helper_test.cc  hb_set_unique_ptr.cc  hb_set_unique_ptr.h  indexed_data_reader.h  int_set.h  int_set_test.cc  sparse_bit_set.cc  sparse_bit_set.h  sparse_bit_set_test.cc  woff2.cc  woff2.h  woff2_test.cc
docs/: closure_glyph_segmentation.md  creating_ift_fonts.md  glyph_segmentation.md
docs/experimental/: README.md  closure_glyph_segmentation.md  closure_glyph_segmentation_complex_conditions.md  closure_glyph_segmentation_merging.md  compiler.md  dependency_graph.md  encoder.md  some_hypo_seg_principles.md
ift/: BUILD  glyph_keyed_diff.cc  glyph_keyed_diff.h  glyph_keyed_diff_test.cc  integration_test.cc  table_keyed_diff.cc  table_keyed_diff.h  table_keyed_diff_test.cc  url_template.cc  url_template.h  url_template_test.cc
ift/client/: BUILD  fontations_client.cc  fontations_client.h
ift/common/: BUILD  axis_range.cc  axis_range.h  axis_range_test.cc  bazel_data_file_resolver.cc  bazel_data_file_resolver.h  bazel_test_font_loader.cc  bazel_test_font_loader.h  binary_diff.h  binary_patch.h  bit_buffer_test.cc  bit_input_buffer.cc  bit_input_buffer.h  bit_input_buffer_test.cc  bit_output_buffer.cc  bit_output_buffer.h  bit_output_buffer_test.cc  branch_factor.h  branch_factor_test.cc  brotli_binary_diff.cc  brotli_binary_diff.h  brotli_binary_patch.cc  brotli_binary_patch.h  brotli_patching_test.cc  compat_id.cc  compat_id.h  data_file_resolver.h  file_font_provider.cc  file_font_provider.h  file_font_provider_test.cc  fixed_data_file_resolver.h  font_data.cc  font_data.h  font_helper.cc  font_helper.h  font_helper_macros.h  font_helper_test.cc  font_provider.h  hasher.h  hb_set_unique_ptr.cc  (+15 more)
ift/config/: BUILD  auto_segmenter_config.cc  auto_segmenter_config.h  auto_segmenter_config_test.cc  common.proto  config_compiler.cc  config_compiler.h  config_compiler_test.cc  load_codepoints.cc  load_codepoints.h  load_codepoints_test.cc  segmentation_plan.proto  segmenter_config.proto  segmenter_config_util.cc  segmenter_config_util.h  segmenter_config_util_test.cc
ift/dep_graph/: BUILD  dependency_graph.cc  dependency_graph.h  dependency_graph_test.cc  node.h  pending_edge.h  traversal.h  unicode_edges.cc  unicode_edges.h  unicode_edges_test.cc
ift/encoder/: BUILD  activation_condition.cc  activation_condition.h  activation_condition_test.cc  candidate_merge.cc  candidate_merge.h  candidate_merge_test.cc  closure_glyph_segmenter.cc  closure_glyph_segmenter.h  compiler.h  (+63 more)
util/: BUILD  auto_config_flags.cc  auto_config_flags.h  auto_segmenter_config.cc  auto_segmenter_config.h  auto_segmenter_config_test.cc  closure_glyph_keyed_segmenter_util.cc  common.proto  convert_iftb.cc  convert_iftb.h  convert_iftb_test.cc  encoder_config.proto  end-to-end.sh  font2ift.cc  freq_data_to_sorted_codepoints.cc  gen_ift_segmentation_plan.cc  gen_ift_segmenter_config.cc  gen_ift_table_keyed_plan.cc  generate_riegeli_test_data.cc  generate_segmenter_config.cc  generate_table_keyed_config.cc  glyph_keyed_segmenter.cc  iftb2config.cc  load_codepoints.cc  load_codepoints.h  load_codepoints_test.cc  path_util.cc  path_util.h  path_util_test.cc  segmentation_plan.proto  segmenter_config.proto  segmenter_config_util.cc  segmenter_config_util.h  segmenter_config_util_test.cc  trace_segmentation_plan.cc  unicode_count.proto
(+48 files in other folders)
